--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
-set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
 
 project(efanna2e)
-
+#set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
+set(CMAKE_VERBOSE_MAKEFILE ON)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
@@ -19,11 +19,7 @@ else()
     message(FATAL_ERROR "no OpenMP supprot")
 endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free")
-#add_definitions (-std=c++11 -O3 -lboost -march=native -Wall -DINFO)
-add_definitions(-march=native -DINFO)
-
-# Boost
-find_package(Boost REQUIRED)
+add_definitions (-std=c++14 -lboost -march=native -DINFO)
 
 add_subdirectory(src)
 add_subdirectory(tests)
