measure percentage of shared best candidates

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,3 +44,6 @@ target_link_libraries(profile_batched_joint_traversal_search ${PROJECT_NAME} -lt
 
 add_executable(profile_reversed_nsg_index profile_reversed_nsg_index.cpp)
 target_link_libraries(profile_reversed_nsg_index ${PROJECT_NAME} -ltcmalloc)
+
+add_executable(profile_search_shared_tops profile_search_shared_tops.cpp)
+target_link_libraries(profile_search_shared_tops ${PROJECT_NAME} -ltcmalloc)
