--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-builtin-malloc -fno-builtin-calloc 
 
 add_subdirectory(src)
 add_subdirectory(tests)
-
+add_subdirectory(CUDA)
 
