--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -84,3 +84,7 @@ target_link_libraries(profile_graph_degree_distribution PRIVATE ${CXX_LIBRARY} -
 add_executable(profile_search_on_recorded_trace profile_search_on_recorded_trace.cpp)
 target_compile_options(profile_search_on_recorded_trace PRIVATE ${CXX_OPTION})
 target_link_libraries(profile_search_on_recorded_trace PRIVATE ${CXX_LIBRARY} -ltcmalloc)
+
+add_executable(profile_search_to_record_trace profile_search_to_record_trace.cpp)
+target_compile_options(profile_search_to_record_trace PRIVATE ${CXX_OPTION})
+target_link_libraries(profile_search_to_record_trace PRIVATE ${CXX_LIBRARY} -ltcmalloc)
