batched search without any group policy

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_CXX_STANDARD 14)
 
-file(GLOB_RECURSE CPP_SOURCES *.cpp)
+#file(GLOB_RECURSE CPP_SOURCES *.cpp)
 #file(GLOB_RECURSE CPP_SOURCES *.cpp *.cu)
 #file(GLOB_RECURSE CUDA_SOURCES *.cu)
 
@@ -10,7 +10,7 @@ set(CXX_LIBRARY ${PROJECT_NAME})
 
 #add_library(${PROJECT_NAME} ${CPP_SOURCES})
 #add_library(${PROJECT_NAME}_s STATIC ${CPP_SOURCES})
-add_library(${CXX_LIBRARY} ${CPP_SOURCES})
+add_library(${CXX_LIBRARY} index.cpp index_nsg.cpp)
 #add_library(${CUDA_LIBRARY} ${CUDA_SOURCES})
 
 target_compile_options(${CXX_LIBRARY} PRIVATE -lboost -march=native -DINFO)
